final fix: Restored CodieKitty's Mario Busters to NC

--- a/comixm.html
+++ b/comixm.html
@@ -256,79 +256,57 @@
 
 <TABLE BORDER="1" BGCOLOR="FFFFFF">
 <tr><td>
+
+<CENTER><A NAME="Mbust"><B>Mario Busters</B></A> - Continuing<BR>
+By CodieKitty and Myself<BR></CENTER>
+
+<TABLE BORDER="0" BGCOLOR="FFFFFF">
+<tr><td>
+<IMG SRC="icon11.gif"><IMG SRC="icon12.gif"><IMG SRC="icon13.gif"><IMG SRC="icon14.gif"><IMG SRC="icon15.gif"><IMG SRC="icon16.gif"><IMG SRC="icon17.gif"><IMG SRC="icon18.gif"><IMG SRC="icon19.gif"><IMG SRC="icon10.gif"><IMG SRC="icon11.gif"><IMG SRC="icon12.gif"><IMG SRC="icon13.gif"><IMG SRC="icon14.gif"><IMG SRC="icon15.gif">
+</td></tr>
+</TABLE>
+
+<CENTER>
+<TABLE BORDER="0" BGCOLOR="FFFFFF">
+<tr><td>
+<CENTER>
+
+<BR>
+<A HREF="mbusters/P1.htm">The Date of Destiny, Part 1(By CodieKitty)</A> - 9/29/01<BR>
+<A HREF="mbusters/P2.htm">Mine Eyes Have Seen The Tubby, Part 2(By Jay Resop)</A> - 10/5/01<BR>
+<A HREF="mbusters/P3.htm">Team RAY Blasts Off Slow as a Slug!, Part 3(By CodieKitty)</A> - 10/14/01<BR>
+<A HREF="mbusters/P4.htm">Theme Song, Part 4(By Jay Resop)</A> - 11/19/01<BR>
+<A HREF="mbusters/P5.htm">The Planet's Dumbest Animals, Part 5(By CodieKitty)</A> - 11/26/01<BR>
+<A HREF="mbusters/P6.htm">Nothing Says Dinner Like Liquid Gummi Bugs and Beef Jerky, Part 6(By Jay Resop)</A> - 1/23/02<BR>
+<A HREF="mbusters/P7.htm">Yays, Rays, and Jays, Part 7(By CodieKitty)</A> - 2/18/02<BR>
+<A HREF="mbusters/P8.htm">Theme Song Second Verse, Part 8(By Jay Resop)</A> - 3/26/02<BR>
+<A HREF="mbusters/P9.htm">Lemmings, Silly Putty, and Robots Equal Fun, Fun, Fun!, Part 9(By CodieKitty)</A> - 4/22/02<BR>
+<A HREF="mbusters/P10.htm">And You Thought It Was Just A Simple Running Joke, Part 10(By Jay Resop)</A> - 6/13/02<BR>
+<A HREF="mbusters/P11.htm">I Listened To The Sports Tribe Music The Whole Time, Part 11(By CodieKitty)</A> - 7/20/02<BR>
+<A HREF="mbusters/P12.htm">Theme Song Third Verse, Part 12(By Jay Resop)</A> - 9/4/02<BR>
+<A HREF="mbusters/P13.htm">I Considered Atma or Lavos, But After Too Many Games Of Bionic Commando I Decided To Throw The Albatross At Him, Part 13(By CodieKitty)</A> - 10/11/02<BR>
+<A HREF="mbust14.html">., Part 14(By Jay Resop)</A> - 12/20/02<BR><BR>
+<A HREF="mbusters/P15.htm">Part 15 - Squaresoft is Overrated</A> (By Codie)<BR>
+<BR>
+<A HREF="mbusters/P16.htm">Part 16 - Theme Song Final Verse</A> (By Jay)<BR>
+<BR>
+<A HREF="mbusters/Pfinal.htm">Final Part - Darkfalz Beware the Generations of Doom (Ominous Warnings Ltd.)</A> (By Both of 
+</CENTER>
+</td></tr>
+</TABLE>
+</CENTER>
+
+<TABLE BORDER="0" BGCOLOR="FFFFFF">
+<tr><td>
+<IMG SRC="icon11.gif"><IMG SRC="icon12.gif"><IMG SRC="icon13.gif"><IMG SRC="icon14.gif"><IMG SRC="icon15.gif"><IMG SRC="icon16.gif"><IMG SRC="icon17.gif"><IMG SRC="icon18.gif"><IMG SRC="icon19.gif"><IMG SRC="icon10.gif"><IMG SRC="icon11.gif"><IMG SRC="icon12.gif"><IMG SRC="icon13.gif"><IMG SRC="icon14.gif"><IMG SRC="icon15.gif">
 </td></tr>
 </TABLE>
 
 </td></tr>
 </TABLE>
 
-        <TABLE BORDER="1" BGCOLOR="FFFFFF">
-        <tr><td>
-
-        <CENTER><A NAME="Mbust"><B>Mario Busters</B></A> - Continuing<BR>
-        By CodieKitty and Jay Resop<BR></CENTER>
-
-        <TABLE BORDER="0" BGCOLOR="FFFFFF">
-        <tr><td><IMG SRC="icon01.gif"><IMG SRC="icon02.gif"><IMG SRC="icon03.gif"><IMG SRC="icon04.gif"><IMG SRC="icon05.gif"><IMG SRC="icon06.gif"><IMG SRC="icon07.gif"><IMG SRC="icon08.gif"><IMG SRC="icon09.gif"><IMG SRC="icon10.gif"><IMG SRC="icon01.gif"><IMG SRC="icon02.gif"><IMG SRC="icon03.gif"><IMG SRC="icon04.gif"><IMG SRC="icon05.gif">
-        </td></tr>
-        </TABLE>
-
-        <CENTER>
-        <TABLE BORDER="0" BGCOLOR="FFFFFF">
-        <tr><td>
-        <CENTER>
-        <BR>
-        <P>CodieKitty: This was a comic I did with Jay Resop of Neglected Mario Characters ages ago, i.e. back when Neglected Mario Characters was still his site.  At its core it's about some Luigi and some other guys going after Mario who's being evil, only the plot has more twists and sidetracks than a Fusilli macaroni art of the New York metro system.  I was kind of embarrassed to look at it for the longest time, but looking at it now it's actually kind of cute sometimes and has its moments.  But it seemed like Jay was doing most of the funny stuff, while I was generally being shit.  His comics were originally hosted on his site, but this series isn't listed on the NC comics anymore for some reason, so I decided to convert them here.<BR>
-        <BR>
-        <A HREF="mbusters/P1.htm">Part 1 - The Date of Destiny</A> (by Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P2.htm">Part 2 - Mine Eyes Have Seen the Tubby</A> (by Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P3.htm">Part 3 - Team RAY Blasts Off Slow as a Slug!</A> (by Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P4.htm">Part 4 - Theme Song</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P5.htm">Part 5 - The Planet's Dumbest Animals</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P6.htm">Part 6 - Nothing Says Dinner Like Liquid Gummi Bugs and Beef Jerky</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P7.htm">Part 7 - Yays, Rays, and Jays</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P8.htm">Part 8 - Theme Song Second Verse</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P9.htm">Part 9 - Lemmings, Silly Putty, and Robots Equal Fun, Fun, Fun!</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P10.htm">Part 10 - And You Thought It Was Just A Simple Running Joke</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P11.htm">Part 11 - I Listened To The Sports Tribe Music The Whole Time</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P12.htm">Part 12 - Theme Song Third Verse</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/P13.htm">Part 13 - I Considered Atma or Lavos, But After Too Many Games Of Bionic Commando I Decided To Throw The Albatross At Him</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P14.htm">Part 14 - </A> (By Jay)*<BR>
-        <BR>
-        <A HREF="mbusters/P15.htm">Part 15 - Squaresoft is Overrated</A> (By Codie)<BR>
-        <BR>
-        <A HREF="mbusters/P16.htm">Part 16 - Theme Song Final Verse</A> (By Jay)<BR>
-        <BR>
-        <A HREF="mbusters/Pfinal.htm">Final Part - Darkfalz Beware the Generations of Doom (Ominous Warnings Ltd.)</A> (By Both of Us)<BR><BR>
-        </CENTER>
-        </td></tr>
-        </TABLE>
-        </CENTER>
-
-        <BR><BR>
-
-        <TABLE BORDER="1" BGCOLOR="FFFFFF">
-        <tr><td>
-        </td></tr>
-        </TABLE>
-
-        </td></tr>
-        </TABLE>
+<BR><BR>
         
-
 <table border="0"><tr><td>
 	<BR><BR>
 
