--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <!--#include virtual="../ads2.htm"-->
 
-<TITLE>Neglected Mario Characters Mirror</TITLE>
+<TITLE>BASC Neglected Mario Characters Mirror</TITLE>
 </HEAD>
 <BODY LINK="FF3333" VLINK="006699" BGCOLOR="FFFFFF" BACKGROUND="back.gif">
 
@@ -25,7 +25,7 @@
 <TD>
 <TABLE BORDER="0">
 <tr><td>
-<center><h1>BA Neglected Mario Characters Mirror</h1>
+<center><h1>BASC Neglected Mario Characters Mirror</h1>
 The Bibliotheca Anonoma's Enhanced Mirror of The Original Web Page Praising the Neglected Characters of the Mario Universe <BR>
 <B><font color=#ff0000>13 Years on the Internet - 9/6/97 to 9/6/10.</font></B><BR><BR>
 <IMG SRC="ncbutton.gif"></CENTER>
